# dbui

./: .gitignore  CLAUDE.md  CURRENT_TASK.md  README.md  install.sh  justfile  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  history.rs  lib.rs  main.rs  sql_analyzer.rs  storage.rs
src-tauri/src/cloud/: aws.rs  kubernetes.rs  mod.rs  url_parser.rs
src-tauri/src/db/: mod.rs  mysql.rs  postgres.rs  redis_db.rs  sqlite.rs  ssh_tunnel.rs
src/components/: CategoryManager.tsx  CellInspector.tsx  CloudImportModal.tsx  ConnectDialog.tsx  ConnectionForm.tsx  ConnectionManager.tsx  ConnectionPath.tsx  ContextMenu.tsx  CreateNameDialog.tsx  DatabaseList.tsx  DependencyGraph.tsx  FunctionViewer.tsx  Icon.tsx  MetadataTable.tsx  ObjectPanel.tsx  ObjectTree.tsx  QueryEditor.tsx  QueryHistory.tsx  ResultsTable.tsx  Sidebar.tsx  TabBar.tsx  Toast.tsx  UserViewer.tsx
src/lib/: deleteQueryGenerator.test.ts  deleteQueryGenerator.ts  resultExporter.test.ts  resultExporter.ts  sqlGenerator.ts  store.tsx  tauri.ts  types.ts  updateQueryGenerator.test.ts  updateQueryGenerator.ts
src/styles/: app.css
