[package]
name = "dbui"
version = "0.2.1"
description = "Database explorer for PostgreSQL and MySQL"
authors = ["you"]
edition = "2021"

[lib]
name = "dbui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1.54"
aws-sdk-secretsmanager = "1.54"
kube = { version = "0.98", default-features = false, features = ["client", "config", "runtime", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
url = "2.5"
dirs = "5.0"
percent-encoding = "2.3"
serde_yaml = "0.9"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

